--- a/portal/templates/profile_test.html
+++ b/portal/templates/profile_test.html
@@ -19,7 +19,7 @@ My TrueNTH Profile
 {% endif %}
 </h3>
 
-<form id="profileForm" class="form tnth-form" role="form">
+<form id="profileForm" class="form tnth-form form-with-floats" role="form">
 
 <div class="row" style="position: relative;">
     <div class="col-md-9">
@@ -35,18 +35,17 @@ My TrueNTH Profile
         {% endif %}
 
         <input type="hidden" name="birthDate" id="birthday" value="{{ user.birthdate if user.birthdate }}">
-        <div class="form-group" style="margin-bottom: 0">
-            <label>Name</label>
-        </div>
         <div class="row">
             <div class="col-xs-6">
                 <div class="form-group float-input-label">
+                    <label for="email">First Name</label>
                     <input required="required" data-error="First name is required" class="form-control float-text" id="firstname" name="firstname" placeholder="" value="{{ user.first_name if user.first_name }}" type="text" />
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-xs-6">
                 <div class="form-group float-input-label">
+                    <label for="email">Last Name</label>
                     <input required="required" data-error="Last name is required" class="form-control float-text" name="lastname" placeholder="Last Name" value="{{ user.last_name if user.last_name }}" type="text" />
                     <div class="help-block with-errors"></div>
                 </div>
@@ -101,12 +100,12 @@ My TrueNTH Profile
         </div>
         <div class="form-group float-input-label" id="emailGroup">
             <label for="email">Email address</label>
-            <input type="text" class="form-control" id="email" name="email" place-holder="Your email" value="{{ user.email if user.email }}" data-customemail="true" required>
+            <input type="text" class="form-control" id="email" name="email" value="{{ user.email if user.email }}" data-customemail="true" required>
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group float-input-label">
             <label for="phone">Cell phone <span class="text-muted smaller-text">(Optional)</span></label>
-            <input type="text" class="form-control" id="phone" name="phone" placeholder="XXX-XXX-XXXX" value="{{ user.phone if user.phone }}">
+            <input type="text" class="form-control" id="phone" name="phone" value="{{ user.phone if user.phone }}">
         </div>
 
         <p id="saveMsg" class="text-muted text-center bg-warning" style="display: none"><small>You've updated your profile. Click the "Save" button to submit your changes. Or <a href="">cancel</a>.</small></p>
@@ -213,6 +212,31 @@ My TrueNTH Profile
 {% endblock %}
 {% block document_ready %}
 $(document).ready(function(){
+
+var showClass = "show"
+// Not using "on" class at the moment
+var onClass = "on"
+$(".form-with-floats .form-group > label").each(function(){
+    console.log($(this))
+    var label = $(this)
+    setTimeout(function() {
+        label.addClass("after-load")
+    }, 300)
+})
+$(".float-input-label > input").bind("checkval",function(){
+    var label = $(this).prev("label")
+    if(this.value !== ""){
+        label.addClass(showClass);
+    } else {
+        label.removeClass(showClass);
+    }
+}).on("keyup",function(){
+    $(this).trigger("checkval")
+}).on("focus",function(){
+    $(this).prev("label").addClass(onClass)
+}).on("blur",function(){
+    $(this).prev("label").removeClass(onClass)
+}).trigger("checkval");
 
     /*** Field Validation ***/
     $('#profileForm').validator({
