--- a/portal/templates/termsofuse.html
+++ b/portal/templates/termsofuse.html
@@ -4,7 +4,15 @@
 
   {{ back_btn(PORTAL,'Home') }}
 
-    <h1 class="tnth-headline">TrueNTH Terms of Use</h1>
+    <h1 class="tnth-headline">TrueNTH</h1>
+
+    <p>&copy; 2016 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization.</p>
+
+    <p>Usage of this site is governed by the study consent form, signed at the time of your enrollment in the study and approved by the local institutional ethics review board. Privacy will be maintained in accordance with that agreement.</p>
+
+    <p>The Movember Foundation may change the General Terms for the TrueNTH website from time to time without notice, so please check back regularly.</p>
+
+    <!--
     <p>
       This Privacy Policy applies solely to the True NTH USA website and not to third party websites reached through a link in the True NTH USA website.
 
@@ -23,7 +31,7 @@
   </p><p>
     Information we collect is stored on servers managed by the University of Washington. We use standard security procedures and practices to protect information from unauthorized access, use, or disclosure. However, no data sent over the Internet can be guaranteed to be 100% secure.
   </p>
-
+  -->
     {% if config.version %}
     <br />
     <div class="pull-right text-muted smaller-text">TrueNTH Version: {{ config.version }}</div>
