https://www.pivotaltracker.com/story/show/116657805 - New contact mailto form. Text updates for About page. Some CSS tweaks.

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -455,6 +455,12 @@ a:active {
     width: 120px;
     border-radius: 60px;
   }
+  .btn-set {
+    margin-bottom: 1em;
+  }
+  .btn-set .btn {
+    margin-bottom: 0.5em;
+  }
 }
 @media (min-width: 1400px) {
   html,
@@ -481,6 +487,12 @@ a:active {
   #homeFooter {
     max-width: 1400px;
     margin: 0 auto;
+  }
+  .btn-set {
+    margin-bottom: 1em;
+  }
+  .btn-set .btn {
+    margin-bottom: 0.5em;
   }
 }
 /*** https://github.com/lipis/bootstrap-social ***/
