--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -36,7 +36,7 @@
                         <img src="{{movember_profile}}" width="50" height="50" />
                     </button>
                     <ul class="tnth-dropdown-menu" role="menu">
-                        <li><a href="{{PORTAL}}">Home</a></li>
+                        <li><a href="{{PORTAL}}">TrueNTH Home</a></li>
                         <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
                         <li><a href="{{PORTAL}}/about">About TrueNTH</a></li>
                         {% if user and user.has_roles('application_developer') %}
@@ -76,7 +76,7 @@
             </div>
             <div id="tnthNavbarXs">
                 <ul class="tnth-navbar-xs">
-                    <li><a href="{{PORTAL}}">Home</a></li>
+                    <li><a href="{{PORTAL}}">TrueNTH Home</a></li>
                     {% if username %}
                     <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
                     {% endif %}
