--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -491,6 +491,12 @@ a:hover, a:active {
       border-radius: 60px;
     }
   }
+  .btn-set {
+    margin-bottom: 1em;
+    .btn {
+      margin-bottom: 0.5em;
+    }
+  }
 }
 
 @media (min-width: 1400px) {
@@ -508,7 +514,6 @@ a:hover, a:active {
       vertical-align: middle; /* vertical */
     }
   }
-
   #fullSizeBox {
     margin: 0 auto;
     max-width: 1400px;
@@ -517,7 +522,14 @@ a:hover, a:active {
     max-width: 1400px;
     margin: 0 auto;
   }
+  .btn-set {
+    margin-bottom: 1em;
+    .btn {
+      margin-bottom: 0.5em;
+    }
+  }
 }
+
 /*** https://github.com/lipis/bootstrap-social ***/
 .btn-social{position:relative;padding-left:44px;text-align:left;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.btn-social>:first-child{position:absolute;left:0;top:0;bottom:0;width:32px;line-height:39px;font-size:1.6em;text-align:center;border-right:1px solid rgba(0,0,0,0.2)}
 .btn-social.btn-lg{padding-left:61px}.btn-social.btn-lg>:first-child{line-height:45px;width:45px;font-size:1.8em}
