--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -4,19 +4,27 @@
 
   <h3 class="tnth-headline">Contact TrueNTH</h3>
 
-  <p>Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a liqua. Ut enim ad minim venom, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comido consequat. Luis aute irure dolor in reprehenderit in voluptate relit esse cillim dolore eu fuggita nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit animé id est labour.</p>
-
   <div class="row">
     <div class="col-md-7">
 
-      [ form goes here ]
+      <form action="" method="post" class="tnth-form">
+        <div class="form-group">
+          <label for="email">Your Email</label>
+          <input type="text" class="form-control" name="email" id="email" placeholder="user@example.com">
+        </div>
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input type="text" class="form-control" name="subject" id="subject" placeholder="Your subject">
+        </div>
+        <div class="form-group">
+          <label for="body">Text</label>
+          <textarea class="form-control" rows="5" name="body" id="body" placeholder="What's on your mind?"></textarea>
+        </div>
+        <button type="submit" class="btn btn-tnth-primary btn-lg">Send</button>
+      </form>
 
     </div>
 
   </div>
 
-  {% if config.version %}
-  <br />
-  <div class="pull-right text-muted smaller-text">TrueNTH Version: {{ config.version }}</div>
-  {% endif %}
 {% endblock %}
