--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -9,6 +9,10 @@
 
       <form action="" method="post" class="tnth-form">
         <div class="form-group">
+          <label for="sendername">Your Name</label>
+          <input type="text" class="form-control" name="sendername" id="sendername" placeholder="Name">
+        </div>
+        <div class="form-group">
           <label for="email">Your Email</label>
           <input type="text" class="form-control" name="email" id="email" placeholder="user@example.com">
         </div>
