Add new "Explore" page.

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -27,7 +27,7 @@
 
                 </div>
                 <div class="tnth-splash-bottom">
-                    <a href="/user/sign-in" class="tnth-splash-bottom-link">Login</a><span class="tnth-splash-bottom-link separator"></span><a href="/about" class="tnth-splash-bottom-link">Explore</a>
+                    <a href="/user/sign-in" class="tnth-splash-bottom-link">Login</a><span class="tnth-splash-bottom-link separator"></span><a href="/explore" class="tnth-splash-bottom-link">Explore</a>
                 </div>
 
             </div>
