--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -2,33 +2,45 @@
 {% block main %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
-  <h3 class="tnth-headline">Contact TrueNTH</h3>
+<h3 class="tnth-headline">Contact TrueNTH</h3>
 
-  <div class="row">
-    <div class="col-md-7">
+<div class="row">
+  <div class="col-md-7">
 
-      <form action="" method="post" class="tnth-form">
-        <div class="form-group">
-          <label for="sendername">Your Name</label>
-          <input type="text" class="form-control" name="sendername" id="sendername" placeholder="Name">
-        </div>
-        <div class="form-group">
-          <label for="email">Your Email</label>
-          <input type="text" class="form-control" name="email" id="email" placeholder="user@example.com">
-        </div>
-        <div class="form-group">
-          <label for="subject">Subject</label>
-          <input type="text" class="form-control" name="subject" id="subject" placeholder="Your subject">
-        </div>
-        <div class="form-group">
-          <label for="body">Text</label>
-          <textarea class="form-control" rows="5" name="body" id="body" placeholder="What's on your mind?"></textarea>
-        </div>
+    <form id="profileForm" action="" method="post" class="tnth-form" data-toggle="validator" role="form">
+      <div class="form-group">
+        <label for="sendername">Your Name</label>
+        <input type="text" class="form-control" name="sendername" id="sendername" data-error="Please enter your name" placeholder="Name" required>
+        <div class="help-block with-errors"></div>
+      </div>
+      <div class="form-group">
+        <label for="email">Your Email</label>
+        <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-error="This isn't a valid e-mail address, please double-check." required>
+        <div class="help-block with-errors"></div>
+      </div>
+      <div class="form-group">
+        <label for="subject">Subject</label>
+        <input type="text" class="form-control" name="subject" id="subject" placeholder="Your subject">
+      </div>
+      <div class="form-group">
+        <label for="body">Text</label>
+        <textarea class="form-control" rows="5" name="body" id="body" data-error="Please add a message for TrueNTH" placeholder="What's on your mind?" required></textarea>
+        <div class="help-block with-errors"></div>
+      </div>
+      <div class="form-group">
         <button type="submit" class="btn btn-tnth-primary btn-lg">Send</button>
-      </form>
-
-    </div>
+      </div>
+    </form>
 
   </div>
 
+</div>
+
+<script>
+  $(document).ready(function(){
+    $('#profileForm').validator({
+      disable: false
+    })
+  })
+</script>
 {% endblock %}
