Fix link to "explore" on portal and remove Lorem Ipsum text for now.

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -4,7 +4,7 @@
 <div class="portal-item">
     <h2 class="tnth-subhead">Explore TrueNTH</h2>
     <p>Discover the tools to guide you through the Cancer journey.</p>
-    <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/about">Learn More</a>
+    <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/explore">Learn More</a>
 </div>
 
 
@@ -31,10 +31,12 @@
 
 <div class="img-with-text flush-with-footer full-width">
     <img src="{{ url_for('static', filename='img/band_man1.jpg') }}" class="img-responsive" />
+    <!--
     <div class="text-on-img text-bot">
         <h2 class="tnth-subhead">LOREM IPSUM</h2>
         <p>"Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
     </div>
+    -->
 </div>
 
 {% endblock %}
