Addressed several issues in the contact form, including handling unicode characters in names, subjects, body.  Default to logged in user email and name if available.  Pick up server value rather than hardcode to prod.
CONTACT_SENDTO_EMAIL is now a config variable.

--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -10,12 +10,17 @@
     <form id="profileForm" action="" method="post" class="tnth-form" data-toggle="validator" role="form">
       <div class="form-group">
         <label for="sendername">Your Name</label>
-        <input type="text" class="form-control" name="sendername" id="sendername" data-error="Please enter your name" placeholder="Name" required>
+        <input type="text" class="form-control" name="sendername"
+          id="sendername" data-error="Please enter your name"
+          placeholder="Name" value="{{ sendername }}" required>
         <div class="help-block with-errors"></div>
       </div>
       <div class="form-group">
         <label for="email">Your Email</label>
-        <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-error="This isn't a valid e-mail address, please double-check." required>
+        <input type="email" class="form-control" name="email"
+          id="email" placeholder="Email" value="{{ email }}"
+          data-error="This isn't a valid e-mail address, please double-check."
+          required>
         <div class="help-block with-errors"></div>
       </div>
       <div class="form-group">
