Rename "Terms of Use" to "Legal". Add "home" link to top of About and Contact.

--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -2,6 +2,7 @@
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
 
+  {{ back_btn(PORTAL,'Home') }}
 
   <h3 class="tnth-headline">About TrueNTH</h3>
 
