--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -2,6 +2,8 @@
 {% block main %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
+{{ back_btn(PORTAL,'Home') }}
+
 <h3 class="tnth-headline">Contact TrueNTH</h3>
 
 <div class="row">
