--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -86,7 +86,7 @@
 <div id="homeFooter" {% if splash_style %}class="container-fluid"{% else %}class="container footer-separate"{% endif %}>
     <div class="row">
         <div class="col-xs-6 col-lg-5 col-lg-offset-1 footer-container">
-            <p><small><a href="{{PORTAL}}/about">About</a> | <a href="{{PORTAL}}/contact">Contact</a> | <a href="{{PORTAL}}/terms-of-use">Legal</a></small></p>
+            <p><small><a href="{{PORTAL}}/about">About</a> | <a href="{{PORTAL}}/contact">Contact</a> | <a href="{{PORTAL}}/legal">Legal</a></small></p>
         </div>
         <div class="col-xs-6 col-lg-5 footer-container">
             <div class="pull-right">
