--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -23,6 +23,8 @@
 
             <div class="tnth-well well">
 
+                <div class="tnth-well-close"><a href="/"><i class="fa fa-close text-muted"></i></a></div>
+
                 <div id="wellContent">
 
                     <div class="btn-set">
