--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -106,6 +106,11 @@ a:hover, a:active {
     margin-right: auto;
   }
 }
+.tnth-well-close {
+  position: absolute;
+  top: 0;
+  right: 6px;
+}
 .tnth-splash {
   color: #fff;
   height: 100%;
