Removed the un-needed complexity of split_string() - simply need to set the config var as a list of items, comma separated.

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -3,7 +3,7 @@
 {% if config.PIWIK_SITEID %}
 <script type="text/javascript">
     var _paq = _paq || [];
-    _paq.push(["setDomains", {{ split_string(config.PIWIK_DOMAINS)|safe }}]);
+    _paq.push(["setDomains", {{ config.PIWIK_DOMAINS|safe }}]);
 
     {% if user %}
     _paq.push(["setUserId", "{{ user.id }}"]);
