Clean up portal_wrapper and add comment about usage.

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -56,11 +56,6 @@
                     </ul>
                     {% endif %}
                 </div>
-                <!--
-                <a class="tnth-white tnth-nav-btn" href="{{PORTAL}}" title="Return to TrueNTH Home">
-                    <div id="tnthHomeBtn"></div>
-                </a>
-                -->
             </div>
         </div>
 
@@ -96,3 +91,13 @@
     </div>
 
 </div>
+<!--
+When calling the wrapper, you can avoid the remainder of the page moving down after the page loads by setting the
+height of the containing div. In this example, #mainNav is the containing div:
+#mainNav { height: 71px; }
+@media (min-width: 768px) {
+    #mainNav {
+        height: 135px;
+    }
+}
+-->
