User Profiles - race/ethnicity now handled per specs. Organizations now listed properly -- list generated basic on API call.

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -308,7 +308,7 @@ a:active {
 /** styles specific to profile **/
 .loading-indicator {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 200px;
   left: 48%;
   margin-left: -50px;
