Adding provider role as per #118951089

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -273,6 +273,11 @@ My TrueNTH Profile
         </div>
         <div class="checkbox">
             <label>
+                <input type="checkbox" value="provider"> Provider
+            </label>
+        </div>
+        <div class="checkbox">
+            <label>
                 <input type="checkbox" value="test"> Test
             </label>
         </div>
