Adds self management card back in, contingent on intervention.user_has_access(user)

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -27,6 +27,15 @@
 </div>
     {% endif %}
 
+    {% set intervention = interventions.self_management %}
+    {% if intervention.user_has_access(user) %}
+<div class="portal-item">
+    <h2 class="tnth-subhead">Self Management</h2>
+    <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated for prostate cancer. Learn strategies to address those symptoms, specifically for men like you.</p>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
+</div>
+    {% endif %}
+
 {% endif %}
 
 <div class="img-with-text flush-with-footer full-width">
