Quick bug fix and workaround so we aren't stuck on initial-queries.

--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -3,7 +3,8 @@
 {% from "flask_user/_macros.html" import back_btn %}
 
   {{ back_btn(PORTAL,'Home') }}
-
+  <form action='initial-queries' method='POST'><input type='submit'
+  value='Continue'/></form>
   <h3 class="tnth-headline">About TrueNTH</h3>
 
   <p>TrueNTH represents the journey men and their loved ones travel during and after a prostate cancer diagnosis, treatment, and recovery.</p>
