--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -7,9 +7,7 @@
 {% endif %}
 
 <div id="loadingIndicator" class="loading-indicator">
-    <i class="fa fa-circle-o-notch fa-spin fa-4x"></i><br />
-    <p class="lead">Saving...</p>
-</div>
+    <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
 
 <h3 class="tnth-headline">
 {% if current_user.has_role('admin')%}
